--- a/ModFmwkProxyService/AndroidManifest.xml
+++ b/ModFmwkProxyService/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:sharedUserId="android.uid.system" android:versionCode="200000" android:versionName="02.00.000" package="com.motorola.modservice.fmwkwrapper" >
     <uses-sdk android:minSdkVersion="25" android:targetSdkVersion="25" />
+    <!-- Permissions default to protectionLevel="signature", so define them here.
+         This allows us to use ModService.apk with the original signature instead
+         of re-signing it with the platform certificate. -->
+    <permission android:name="com.motorola.mod.permission.MOD_INTERNAL" android:protectionLevel="signatureOrSystem" />
+    <permission android:name="com.motorola.mod.permission.MOD_SERVICE" android:protectionLevel="signatureOrSystem" />
+    <permission android:name="com.motorola.mod.permission.INTERACT_ACROSS_USERS_FULL" android:protectionLevel="signatureOrSystem" />
     <uses-permission android:name="android.permission.GRANT_RUNTIME_PERMISSIONS" />
     <uses-permission android:name="android.permission.REVOKE_RUNTIME_PERMISSIONS" />
     <uses-permission android:name="android.permission.SET_ORIENTATION" />
