addison: Limit hotspot to 10 devices
Signed-off-by: klozz <shaclone707@gmail.com>

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -433,6 +433,9 @@ gBtcEnableIndTimerVal=5
 
 gIgnorePeerErpInfo=1
 
+# TheCrazyLex@PA limit max AP peers to 10 to prevent overloading
+gSoftApMaxPeers=10
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
