addison: fixup greybus detection
Signed-off-by: klozz <klozz707@gmail.com>

--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -244,12 +244,6 @@ service init_wifi /system/bin/wlan_carrier_bin.sh
     group root
     oneshot
 
-on property:vold.decrypt=trigger_post_fs_data
-    start gbmodinstall
-
-on nonencrypted
-    start gbmodinstall
-
 on charger
     trigger early-fs
     trigger fs
@@ -310,11 +304,11 @@ service mods_camd /system/bin/mods_camd
     rlimit 14 4 4
     ioprio rt 4
 
-service gbmodinstall /init.gbmods.sh
-    seclabel u:r:init_mods:s0
+service gbmodinstall /system/bin/init.gbmods.sh
+#    seclabel u:r:init_mods:s0
+    class core
     user root
     oneshot
-    disabled
 
 service thermal-com /system/vendor/bin/thermal-engine --minimode
     class main
