--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -303,6 +303,7 @@ service mods_camd /system/bin/mods_camd
     disabled
     rlimit 14 4 4
     ioprio rt 4
+    disabled
 
 service gbmodinstall /system/bin/init.gbmods.sh
 #    seclabel u:r:init_mods:s0
