--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -46,6 +46,9 @@ on init
 on fs
     # use /persist as phony PDS partition
     symlink /persist /pds
+    
+    wait_for_prop service.sf.primary_display_ready 1
+    start hwcomposer-2-1
 
 on post-fs
     mkdir /persist/camera 0755 oem_5004 oem_5004
