--- a/rootdir/etc/ueventd.rc
+++ b/rootdir/etc/ueventd.rc
@@ -1,4 +1,4 @@
-# Copyright (c) 2012-2015,2017, The Linux Foundation. All rights reserved.
+# Copyright (c) 2012-2015, 2017, The Linux Foundation. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -25,28 +25,14 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-/dev/null                 0666   root       root
-/dev/zero                 0666   root       root
-/dev/full                 0666   root       root
-/dev/ptmx                 0666   root       root
-/dev/tty                  0666   root       root
-/dev/random               0666   root       root
-/dev/urandom              0666   root       root
-
-/dev/ashmem               0666   root       root
-/dev/binder               0666   root       root
-/dev/tspdrv               0666   root       root
-/dev/ttyHSL0             0660   radio      system
-# logger should be world writable (for logging) but not readable
-/dev/log/*                0666   root       log
-
 # the DIAG device node is not world writable/readable.
-/dev/diag                 0660   system     oem_2950
-/dev/ttydiag0             0660   system     oem_2950
-/dev/ttydiag1             0660   system     oem_2950
-/dev/ttydiag2             0660   system     oem_2950
+/dev/diag                 0660   system     oem_2901
+/dev/ttydiag0             0660   system     oem_2901
+/dev/ttydiag1             0660   system     oem_2901
+/dev/ttydiag2             0660   system     oem_2901
 
 /dev/genlock              0666   system     system
+/dev/wlan                 0660   wifi       wifi
 /dev/kgsl                 0666   system     system
 /dev/kgsl-3d0             0666   system     system
 /dev/kgsl-2d0             0666   root       root
@@ -60,7 +46,6 @@
 /dev/smd6                 0660   system     system
 /dev/smd7                 0660   bluetooth  bluetooth
 /dev/ccid_bridge          0660   system     system
-/dev/wlan                 0660   wifi       wifi
 /dev/ipa                  0660   radio      radio
 /dev/wwan_ioctl           0660   radio      radio
 /dev/ipaNatTable          0660   radio      radio
@@ -222,7 +207,7 @@
 /dev/block/bootdevice/by-name/dhob         0660 radio radio
 /dev/block/bootdevice/by-name/clogo        0660 root oem_5004
 /dev/block/bootdevice/by-name/cid          0660 root oem_5004
-/dev/block/bootdevice/by-name/logs         0640 root log
+/dev/block/bootdevice/by-name/logs         0640 root system
 /dev/block/bootdevice/by-name/utags        0660 oem_5004 system
 /dev/block/bootdevice/by-name/utagsBackup  0660 oem_5004 system
 
@@ -276,12 +261,19 @@
 /sys/devices/soc/600000.qcom,pcie/pci0000:00/0000:00:00.0/0000:01:00.0/net/wlan0/queues/rx-* rps_cpus 0660 system system
 /sys/devices/soc/600000.qcom,pcie/pci0000:00/0000:00:00.0/0000:01:00.0/net/p2p0/queues/rx-* rps_cpus 0660 system system
 
+# wigig
+/sys/bus/pci/drivers/wil6210* 0000:01:00.0/wil6210/fst_link_loss 0660 wifi wifi
+/sys/bus/pci/drivers/wil6210* 0000:01:00.0/wil6210/thermal_throttling 0660 system system
+/sys/bus/pci/drivers/wil6210* 0000:01:00.0/net/wigig0/queues/rx-0/rps_cpus 0660 system system
+/sys/bus/pci/drivers/wil6210* 0000:01:00.0/net/wigig0/gro_flush_timeout 0660 system system
+/sys/devices/virtual/net/bond0 queues/rx-0/rps_cpus 0660 system system
+
 #nfc permissions
 /dev/nfc-nci              0660    nfc         nfc
 /dev/nq-nci               0660    nfc         nfc
 /dev/assd                 0660    nfc         nfc
-/dev/bcm2079x-i2c         0660    nfc         nfc
 /dev/pn544                0660    nfc         nfc
+/dev/bcm2079x-i2c         0660    nfc         nfc
 
 # UIO devices
 /dev/uio0                 0660   system     system
@@ -384,10 +376,20 @@
 /sys/devices/virtual/video4linux/video* uevent 0660 root oem_5020
 
 # Laser device
-/dev/laser                 0660   system     camera
+/dev/laser                0660   system     camera
+
+# haptic
+/dev/drv2605              0660   system     system
 
 #haptic
 /dev/drv2605              0660   system     system
 
 #DTV
 /dev/isdbt                 0660 oem_5019  oem_5019
+
+#Egistec fingerprint
+/dev/esfp0		  0660   system     system
+
+# Trustonic TEE device
+/dev/mobicore             0600   system     system
+/dev/mobicore-user        0666   system     system
