addison: fix the issue related to read greybus modules also add the option to enable gbmodinstall in on property:sys.boot_completed=1 to avoid any issue related to not initiate if you pass these others props
Signed-off-by: klozz <klozz707@gmail.com>

--- a/rootdir/etc/init.mods.rc
+++ b/rootdir/etc/init.mods.rc
@@ -4,6 +4,9 @@ on nonencrypted
 on property:vold.decrypt=trigger_post_fs_data
     start gbmodinstall
 
+on property:sys.boot_completed=1
+    start gbmodinstall
+
 service mods_camd /vendor/bin/mods_camd
     class late_start
     user camera
