--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -451,7 +451,7 @@ service ims_rtp_daemon /system/bin/ims_rtp_daemon
    class main
    user system
    socket ims_rtpd stream 0660 system radio
-   group radio oem_2950 oem_2950 inet log
+   group radio diag diag inet log
    disabled
 
 on property:sys.ims.DATA_DAEMON_STATUS=1
@@ -460,7 +460,7 @@ on property:sys.ims.DATA_DAEMON_STATUS=1
 service imscmservice /system/bin/imscmservice
     class main
     user system
-    group radio oem_2950 oem_2950 log
+    group radio diag diag log
     disabled
 
 on property:sys.ims.DATA_DAEMON_STATUS=1
@@ -470,7 +470,7 @@ service imsdatadaemon /system/bin/imsdatadaemon
     class main
     user system
     socket ims_datad stream 0660 system radio
-    group system wifi radio inet log oem_2950
+    group system wifi radio inet log diag
     disabled
 
 on property:sys.ims.QMI_DAEMON_STATUS=1
@@ -480,7 +480,7 @@ service imsqmidaemon /system/bin/imsqmidaemon
     class main
     user system
     socket ims_qmid stream 0660 system radio
-    group radio log oem_2950
+    group radio log diag
 
 service rmt_storage /system/bin/rmt_storage
     class core
@@ -548,7 +548,7 @@ service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
 service ril-daemon2 /vendor/bin/hw/rild -c 2
     class main
     user radio
-    group radio cache inet misc audio log readproc wakelock oem_2950
+    group radio cache inet misc audio log readproc wakelock
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 service rild2-wrapper /vendor/etc/init.qcom.ril.sh
