addison: fix mods loading, also fix ril.sh script execution
Signed-off-by: klozz <klozz707@gmail.com>

--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -1,5 +1,7 @@
 # Moto USB configuration
 import /vendor/etc/init/hw/init.mmi.usb.rc
+# Moto Mod enable script by klozz Jesús aka TeamMEX@XDA-Developers
+import /vendor/etc/init/hw/init.mods.rc
 
 on early-boot
     write /sys/module/subsystem_restart/parameters/disable_restart_work 0x0
