--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -230,6 +230,7 @@ on post-fs-data
     mkdir /persist/data/tz 0700 system system
     mkdir /data/misc/dts 0770 media audio
     mkdir /data/misc/hbtp 0750 system system
+	mkdir /data/vendor/misc 0770 system system
 
     #Create directories for Fingerprint
     mkdir /data/misc/stargate 0770 system system
