addison: Mount mtp functionfs with no_disconnect
This way the function can still connect even when the media
process has been killed for whatever reason.

Signed-off-by: klozz <klozz707@gmail.com>

--- a/rootdir/etc/init.mmi.usb.rc
+++ b/rootdir/etc/init.mmi.usb.rc
@@ -59,7 +59,7 @@ on fs
     mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
     write /sys/class/android_usb/android0/f_ffs/aliases adb,mtp
     mkdir /dev/usb-ffs/mtp 0770 mtp mtp
-    mount functionfs mtp /dev/usb-ffs/mtp rmode=0770,fmode=0660,uid=1024,gid=1024
+    mount functionfs mtp /dev/usb-ffs/mtp rmode=0770,fmode=0660,uid=1024,gid=1024,no_disconnect=1
 
 #  Disable USB-SS in bp-tools
 on property:ro.bootmode=bp-tools
