--- a/rootdir/etc/init.mmi.usb.rc
+++ b/rootdir/etc/init.mmi.usb.rc
@@ -56,10 +56,10 @@ on charger
 on fs
     mkdir /dev/usb-ffs 0775 shell shell
     mkdir /dev/usb-ffs/adb 0770 shell shell
-    mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
+    mount functionfs adb /dev/usb-ffs/adb noatime uid=2000,gid=2000,no_disconnect=1
     write /sys/class/android_usb/android0/f_ffs/aliases adb,mtp
     mkdir /dev/usb-ffs/mtp 0770 mtp mtp
-    mount functionfs mtp /dev/usb-ffs/mtp rmode=0770,fmode=0660,uid=1024,gid=1024,no_disconnect=1
+    mount functionfs mtp /dev/usb-ffs/mtp noatime rmode=0770,fmode=0660,uid=1024,gid=1024,no_disconnect=1
 
 #  Disable USB-SS in bp-tools
 on property:ro.bootmode=bp-tools
