addison: ship 32bit ril blobs *also add moards sepolicy
Signed-off-by: klozz <klozz707@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -444,8 +444,8 @@ service qcamerasvr /vendor/bin/mm-qcamera-daemon
 
 service cnd /vendor/bin/cnd
     class late_start
+	user system
 	group system wifi inet radio wakelock net_admin
-    socket cnd stream 660 root inet
 
 service wcnss-service /vendor/bin/wcnss_service
     class main
@@ -563,11 +563,8 @@ service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
 
 service ril-daemon2 /vendor/bin/hw/rild -c 2
     class main
-    socket rild2 stream 660 root radio
-    socket rild-debug2 stream 660 radio system
     user radio
-    disabled
-    group radio cache inet misc audio sdcard_r sdcard_rw diag oem_2901 log
+    group radio cache inet misc audio log readproc wakelock
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 service rild2-wrapper /vendor/etc/init.qcom.ril.sh
