--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -171,6 +171,9 @@ on boot
 
     setprop ro.telephony.call_ring.multiple false
 
+    # Prevents permission denied error for telephony
+    chmod 0644 /proc/cmdline
+
     #enable camera read sensors data
     setprop persist.camera.gyro.disable 0
 
