--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -114,27 +114,10 @@ on boot
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/device/extldo
     chmod 0660 /sys/class/rfkill/rfkill0/device/extldo
 
-    # Mark the copy complete flag to not completed Remove this after test
-    write /data/misc/radio/copy_complete 0
-    chown radio radio /data/misc/radio/copy_complete
-    chmod 0660 /data/misc/radio/copy_complete
-
-    # Mark the copy complete flag to not completed oreo blob needed
+    # Mark the copy complete flag to not completed
     write /data/vendor/radio/copy_complete 0
     chown radio radio /data/vendor/radio/copy_complete
     chmod 0660 /data/vendor/radio/copy_complete
-
-    # copy prebuilt qcril.db files always remove them after test
-    copy /system/vendor/qcril.db /data/misc/radio/qcril_prebuilt.db
-    chown radio radio /data/misc/radio/qcril_prebuilt.db
-    chmod 0660 /data/misc/radio/qcril_prebuilt.db
-    # File flags for prebuilt ril db file
-    write /data/misc/radio/prebuilt_db_support 1
-    chown radio radio /data/misc/radio/prebuilt_db_support
-    chmod 0400 /data/misc/radio/prebuilt_db_support
-    write /data/misc/radio/db_check_done 0
-    chown radio radio /data/misc/radio/db_check_done
-    chmod 0660 /data/misc/radio/db_check_done
 
     # copy prebuilt qcril.db files always
     copy /vendor/radio/qcril_database/qcril.db /data/vendor/radio/qcril_prebuilt.db
@@ -503,21 +486,29 @@ service imsqmidaemon /system/bin/imsqmidaemon
 service rmt_storage /vendor/bin/rmt_storage
     class core
     user root
+    shutdown critical
+    ioprio rt 0
+    group wakelock
+    seclabel u:r:rmt_storage:s0
 
 service tftp_server /vendor/bin/tftp_server
    class core
    user root
+   seclabel u:r:rfs_access:s0
 
 service per_mgr /vendor/bin/pm-service
     class core
     user system
-    group system
+    group system net_raw
+    ioprio rt 4
+    seclabel u:r:per_mgr:s0
 
 service per_proxy /vendor/bin/pm-proxy
     class core
     user system
     group system
     disabled
+    seclabel u:r:per_mgr:s0
 
 on property:init.svc.per_mgr=running
     start per_proxy
@@ -529,11 +520,12 @@ service netmgrd /vendor/bin/netmgrd
     class main
     user root
     group root wifi wakelock radio inet diag
+    seclabel u:r:netmgrd:s0
 
 service qti /vendor/bin/qti
     class main
     user radio
-    group radio oem_2950 oem_2901 diag usb net_admin
+    group radio net_raw diag usb net_admin
 
 on property:ro.use_data_netmgrd=false
     # netmgr not supported on specific target
@@ -565,8 +557,10 @@ service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
 
 service ril-daemon2 /vendor/bin/hw/rild -c 2
     class main
+    socket rild2 stream 660 root radio
+    socket rild-debug2 stream 660 radio system
     user radio
-    group radio cache inet misc audio log readproc wakelock
+    group radio cache inet misc audio sdcard_r sdcard_rw diag oem_2950 log
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 service rild2-wrapper /vendor/etc/init.qcom.ril.sh
@@ -583,7 +577,8 @@ service msm_irqbalance /system/bin/msm_irqbalance -f /vendor/etc/msm_irqbalance.
 service loc_launcher /vendor/bin/loc_launcher
     #loc_launcher will start as root and set its uid to gps
     class late_start
-    group gps inet oem_2950 wifi
+    group gps inet diag wifi
+    seclabel u:r:location:s0
 
 on charger
     wait /dev/block/bootdevice/by-name/system
