Update peripheral manager to drop net_raw
Basically applying a90963aca7185a96b8353214a79d14d12efb4ff1 again with updated paths for vendor moved binaries

Signed-off-by: klozz <klozz707@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -490,7 +490,7 @@ service tftp_server /vendor/bin/tftp_server
 service per_mgr /vendor/bin/pm-service
     class core
     user system
-    group system net_raw
+    group system
     ioprio rt 4
     seclabel u:r:per_mgr:s0
 
