--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -258,6 +258,7 @@ on charger
 on moto-charger
     setprop ro.board.platform msm8953
     trigger firmware_mounts_complete
+    start charge_only_mode
     start thermal-com
 
 on property:ro.boot.dualsim=true
@@ -291,6 +292,11 @@ service motosh /vendor/bin/motosh boot
     user compass
     group compass misc input
     oneshot
+
+service charge_only_mode /vendor/bin/charge_only_mode
+    user root
+    group graphics system input
+    disabled
 
 service thermal-com /vendor/bin/thermal-engine --minimode
     class main
