--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -280,6 +280,11 @@ on boot
    chown system oem_5004 /sys/bus/spi/devices/spi8.0/irq_cnt
    chmod 0440 /sys/bus/spi/devices/spi8.0/irq_cnt
 
+ # Change ownership and permission for leds backlight
+   chmod 0664 /sys/class/leds/lcd-backlight/brightness
+   chown system system /sys/class/leds/charging/brightness
+   chmod 0664 /sys/class/leds/charging/brightness
+
    # Allow RunIn (factory test app) to control charging state
    chown system system /sys/class/power_supply/battery/charging_enabled
    chown system system /sys/class/power_supply/battery/battery_charging_enabled
@@ -314,6 +319,8 @@ on moto-charger
     setprop ro.board.platform msm8953
     load_system_props
     trigger firmware_mounts_complete
+    start  qcom-post-boot
+    start gbmodinstall
     start charge_only_mode
     start thermal-com
 
