--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -317,8 +317,6 @@ on moto-charger
     setprop ro.board.platform msm8953
     load_system_props
     trigger firmware_mounts_complete
-    start  qcom-post-boot
-    start gbmodinstall
     start charge_only_mode
     start thermal-com
 
@@ -354,7 +352,7 @@ service motosh /vendor/bin/motosh boot
     group compass misc input
     oneshot
 
-service charge_only_mode /vendor/bin/charge_only_mode
+service charge_only_mode /sbin/charge_only_mode
     user root
     group graphics system input
     disabled
