addison: ship missing atfwd daemon
Signed-off-by: klozz <klozz707@gmail.com>
Signed-off-by: klozz <shaclone707@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -631,6 +631,11 @@ service tftp_server /vendor/bin/tftp_server
    class core
    user root
 
+service atfwd /vendor/bin/ATFWD-daemon
+    class late_start
+    user system
+    group system radio
+
 service netmgrd /vendor/bin/netmgrd
     class main
     user root
