addison: Fix mediaextractor for vfat in enforced this allow us to reproduce music(for uid=1040 path=2F6D6E742F(reference to the SDcard Guid) * add sysfs battery info to camera (Motorola Camera need perms to know the current charge (CAM_DATAProc  for uid=1047 name="battery" dev="sysfs" ) * Bluetooth allow to read libApTX be readed from vendor (for uid=1002 name="libaptX_encoder.so") * Allow to the sensorhub to search inside his dirs to read all the sensors for uid=1000 name="sensorhub" * Allow thermal engine to be executed ( for uid=10053 comm=44756F4267546872656164202330 name="thermal-engine") * Sepolicy for charge_only and move the binary to vendor/bin
Signed-off-by: klozz <shaclone707@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -523,10 +523,9 @@ on post-fs-data
 
     setprop vold.post_fs_data_done 1
 
-service charger /sbin/charge_only_mode
-    class charger
-    group log
-    seclabel u:r:charger:s0
+service charger /vendor/bin/charge_only_mode
+    user root
+    group graphics system input
 
 # Allow usb charging to be disabled peristently
 on property:persist.usb.chgdisabled=1
