Addison: add MODEM_PA_MITIGATION and MODEM_PROC_TEMP_MITIGATION  * this helps with high temp also  * Fixes high ping issue during high temperature
Signed-off-by: klozz <shaclone707@gmail.com>

--- a/configs/thermal-engine-addison.conf
+++ b/configs/thermal-engine-addison.conf
@@ -108,3 +108,21 @@ thresholds         52000    56000
 thresholds_clr     47000    53000
 actions            camera   camera
 action_info        1        2
+
+[MODEM_PROC_TEMP_MITIGATION]
+#algo_type monitor
+sampling 10000
+sensor case_therm
+thresholds 70000 70000
+thresholds_clr 69000 69000
+actions modem_proc modem_proc
+action_info 1 3
+
+[MODEM_PROC_TEMP_MITIGATION]
+#algo_type monitor
+sampling 10000
+sensor case_therm
+thresholds 70000 70000
+thresholds_clr 69000 69000
+actions modem_proc modem_proc
+action_info 1 3
