--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -68,6 +68,24 @@ temp_range 6000 10000 2000
 max_temp 45000
 offset -4000
 
+[MODEM_PROC_TEMP_MITIGATION]
+#algo_type monitor
+sampling 10000
+sensor case_therm
+thresholds 70000 70000
+thresholds_clr 69000 69000
+actions modem_proc modem_proc
+action_info 1 3
+
+[MODEM_PROC_TEMP_MITIGATION]
+#algo_type monitor
+sampling 10000
+sensor case_therm
+thresholds 70000 70000
+thresholds_clr 69000 69000
+actions modem_proc modem_proc
+action_info 1 3
+
 # From addison thermal conf
 
 [FRONT_TEMP]
