addison:Restart wifi hal on encrypted and non encrypted devices this may help in wifi connection under public wifi
Signed-off-by: klozz <shaclone707@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -667,7 +667,13 @@ service vendor.qcamerasvr /vendor/bin/mm-qcamera-daemon
     group camera system inet input graphics
 
 on property:vold.decrypt=trigger_restart_framework
+    stop vendor.wifi_hal_legacy
     start vendor.wcnss-service
+    start vendor.wifi_hal_legacy
+
+on nonencrypted
+    stop vendor.wifi_hal_legacy
+    start vendor.wifi_hal_legacy
 
 service vendor.wcnss-service /vendor/bin/wcnss_service
     class main
