addison: fix dac_override in our post_boot script
Signed-off-by: klozz <shaclone707@gmail.com>

--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -278,6 +278,7 @@ service vendor.mmi-laser-sh /vendor/bin/init.mmi.laser.sh
 service vendor.xperience-post-boot /vendor/bin/init.xperience.postboot.sh
     class late_start
     user root
+    group root system wakelock graphics
     disabled
 
 # Start Sensor daemon
