addison: update thermal config
Signed-off-by: klozz <shaclone707@gmail.com>

--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -13,92 +13,63 @@
 # tsens_tz_sensor7 : cpu7
 # tsens_tz_sensor6 : cpu6
 
+# CPU voltage table:
+# cluster0[0] voltage = 0 mV freq = 2016000 kHz
+# cluster0[1] voltage = 0 mV freq = 1958400 kHz
+# cluster0[2] voltage = 0 mV freq = 1804800 kHz
+# cluster0[3] voltage = 0 mV freq = 1689600 kHz
+# cluster0[4] voltage = 0 mV freq = 1401600 kHz
+# cluster0[5] voltage = 0 mV freq = 1036800 kHz
+# cluster0[6] voltage = 0 mV freq = 652800 kHz
+# cluster1[0] voltage = 0 mV freq = 2016000 kHz
+# cluster1[1] voltage = 0 mV freq = 2016000 kHz
+# cluster1[2] voltage = 0 mV freq = 2016000 kHz
+# cluster1[3] voltage = 0 mV freq = 2016000 kHz
+# cluster1[4] voltage = 0 mV freq = 2016000 kHz
+# cluster1[5] voltage = 0 mV freq = 2016000 kHz
+# cluster1[6] voltage = 0 mV freq = 2016000 kHz
+
 # CPU VOLTAGE TABLE
-# CLUSTER 1      : CLUSTER 0
+# CLUSTER 1      : CLUSTER 0     
 # FREQ    : VOLT : FREQ    : VOLT
+# 2016000 :    0 : 2016000 :    0
+# 2016000 :    0 : 1958400 :    0
+# 2016000 :    0 : 1804800 :    0
+# 2016000 :    0 : 1689600 :    0
+# 2016000 :    0 : 1401600 :    0
+# 2016000 :    0 : 1036800 :    0
+# 2016000 :    0 :  652800 :    0
 
 debug
+
 #Conf file: system/vendor/etc/thermal-engine.conf
 
-[VIRTUAL-CPUS]
-#algo_type virtual
-trip_sensor tsens_tz_sensor9
-set_point 75000
-set_point_clr 65000
-sensors tsens_tz_sensor9 tsens_tz_sensor10 tsens_tz_sensor11 tsens_tz_sensor12 tsens_tz_sensor13 tsens_tz_sensor4 tsens_tz_sensor5 tsens_tz_sensor6 tsens_tz_sensor7 tsens_tz_sensor8
-weights
-offsets
-sampling 50
-math 2
-ambient_value
-rise_value
+[MONITOR-CAMERA-MSM]
+algo_type        monitor
+sampling         1000
+sensor           msm_therm
+thresholds       52000        56000
+thresholds_clr   47000        53000
+actions          camera       camera
+action_info      1            2
 
-[SS-GPU]
-#algo_type ss
-sampling 250
-sensor gpu
-device gpu
-set_point 95000
-set_point_clr 65000
-time_constant 0
+[SS-CHG-BATT]
+algo_type        ss
+sampling         5000
+sensor           chg_therm
+device           battery
+set_point        51000
+set_point_clr    47000
+time_constant    0
 
-[SS-POPMEM]
-#algo_type ss
-sampling 250
-sensor pop_mem
-device cluster0
-set_point 70000
-set_point_clr 55000
-time_constant 2
-
-[SS-CPUS-ALL]
-#algo_type ss
-sampling 50
-sensor VIRTUAL-CPUS
-device cluster0
-set_point 95000
-set_point_clr 55000
-time_constant 0
-
-[SPEAKER-CAL]
-sampling 30000 30000 10 1800000
-sensor pm8953_tz
-sensors tsens_tz_sensor1 tsens_tz_sensor2 tsens_tz_sensor3 tsens_tz_sensor14 tsens_tz_sensor15
-temp_range 6000 10000 2000
-max_temp 45000
-offset -4000
-
-[MODEM_PROC_TEMP_MITIGATION]
-#algo_type monitor
-sampling 10000
-sensor case_therm
-thresholds 70000 70000
-thresholds_clr 69000 69000
-actions modem_proc modem_proc
-action_info 1 3
-
-[MODEM_PROC_TEMP_MITIGATION]
-#algo_type monitor
-sampling 10000
-sensor case_therm
-thresholds 70000 70000
-thresholds_clr 69000 69000
-actions modem_proc modem_proc
-action_info 1 3
-
-# From addison thermal conf
-
-[FRONT_TEMP]
-algo_type        virtual
-trip_sensor      msm_therm
-set_point        -18000
-set_point_clr    -20000
-sensors          msm_therm pa_therm0 chg_therm batt_temp
-weights          110       100       85        110
-offsets          -2000     -2000     -2000     -2000
-sampling         10000
-math             0
-sys_temp
+[REPORT-BACK-TEMP]
+algo_type        monitor
+sampling         300000
+sensor           BACK_TEMP
+thresholds       45000
+thresholds_clr   43000
+actions          report
+action_info      1
 
 [REPORT-FRONT-TEMP]
 algo_type        monitor
@@ -108,6 +79,15 @@ thresholds       45000
 thresholds_clr   43000
 actions          report
 action_info      1
+
+[SS-MSM-CLUSTER0]
+algo_type        ss
+sampling         1000
+sensor           msm_therm
+device           cluster0
+set_point        49000
+set_point_clr    44000
+device_max_limit 1401600
 
 [BACK_TEMP]
 algo_type        virtual
@@ -120,29 +100,85 @@ offsets          -1000     -1000     -1000     -1000
 sampling         10000
 math             0
 sys_temp
+ambient_value
+rise_value
 
-[REPORT-BACK-TEMP]
-algo_type        monitor
-sampling         300000
-sensor           BACK_TEMP
-thresholds       45000
-thresholds_clr   43000
-actions          report
-action_info      1
+[FRONT_TEMP]
+algo_type       virtual
+trip_sensor     msm_therm
+set_point       -18000
+set_point_clr   -20000
+sensors         msm_therm pa_therm0 chg_therm batt_temp
+weights         110       100       85        110
+offsets         -2000     -2000     -2000     -2000
+sampling        10000
+math            0
+sys_temp
+ambient_value
+rise_value
 
-[SS-CHG-BATT]
-algo_type        ss
-sampling         5000
-sensor           chg_therm
-device           battery
-set_point        51000
-set_point_clr    47000
+[VIRTUAL-CPUS]
+#algo_type     virtual
+trip_sensor    tsens_tz_sensor9
+set_point      75000
+set_point_clr  65000
+sensors        tsens_tz_sensor9 tsens_tz_sensor10 tsens_tz_sensor11 tsens_tz_sensor12 tsens_tz_sensor13 tsens_tz_sensor4 tsens_tz_sensor5 tsens_tz_sensor6 tsens_tz_sensor7 tsens_tz_sensor8
+weights
+offsets
+sampling       50
+math           2
+ambient_value
+rise_value
 
-[MONITOR-CAMERA-MSM]
-algo_type          monitor
-sampling           1000
-sensor             msm_therm
-thresholds         52000    56000
-thresholds_clr     47000    53000
-actions            camera   camera
-action_info        1        2
+[SS-GPU]
+#algo_type    ss
+sampling      250
+sensor        gpu
+device        gpu
+set_point     95000
+set_point_clr 65000
+time_constant 0
+
+[SS-POPMEM]
+#algo_type    ss
+sampling      250
+sensor        pop_mem
+device        cluster0
+set_point     70000
+set_point_clr 55000
+time_constant 2
+
+[SS-CPUS-ALL]
+#algo_type    ss
+sampling      50
+sensor        VIRTUAL-CPUS
+device        cluster0
+set_point     95000
+set_point_clr 55000
+time_constant 0
+
+[SPEAKER-CAL]
+sampling      30000 30000 10 1800000
+sensor        pm8953_tz
+sensors       tsens_tz_sensor1 tsens_tz_sensor2 tsens_tz_sensor3 tsens_tz_sensor14 tsens_tz_sensor15
+temp_range    6000 10000 2000
+max_temp      45000
+offset        -4000
+
+[MODEM_PROC_TEMP_MITIGATION]
+#algo_type     monitor
+sampling       10000
+sensor         case_therm
+thresholds     70000      70000
+thresholds_clr 69000      69000
+actions        modem_proc modem_proc
+action_info    1          3
+
+[MODEM_PROC_TEMP_MITIGATION]
+#algo_type     monitor
+sampling       10000
+sensor         case_therm
+thresholds     70000       70000
+thresholds_clr 69000       69000
+actions        modem_proc  modem_proc
+action_info    1           3
